@@ -1,0 +1,2 @@
+:auto_ids: true
+:auto_id_separator: .
