@@ -1,0 +1,2 @@
+[id=brand.goes.here]
+image::logo.png[Project Name]
