@@ -1,0 +1,1 @@
+<img id="brand.goes.here" src="logo.png" alt="Project Name">
