@@ -15,8 +15,9 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 === Changed
 
-* automatically set idprefix, if necessary, based on value of :auto_id_prefix option when :auto_ids options is set
+* automatically set idprefix, if necessary, based on value of :auto_id_prefix option when :auto_ids options is set (#16)
 * don't modify value of :attributes option passed to `convert` and `convert_file` API methods
+* define ID containing a dot using longhand attribute assignment (#59)
 
 == 1.0.0.alpha.12 (2018-08-11) - @mojavelinux
 
